# dsa4262

./: .gitignore  EDA Final version.ipynb  EDA.ipynb  README.md  pyproject.toml
Assignment 1/: Stress and Mental Distress Among Students.docx  StudentCareServicesGEOJSON.json  assignment 1.ipynb  data1.csv  ~$ress and Mental Distress Among Students.docx
Assignment 2/: Assignment 2.ipynb  Assignment_2_Stress_Detection.html  test_predictions_detailed.csv  test_predictions_final_ensemble.csv
demo/: index.html  package-lock.json  package.json  supabase-schema.sql  vite.config.ts
demo/admin/: index.html  package-lock.json  package.json  vite.config.ts
demo/admin/src/: index.css
demo/admin/src/pages/: Dashboard.css  Dashboard.tsx
demo/backend/: main.py
demo/db/: schema.sql
demo/src/: App.tsx  index.css
demo/src/components/: Layout.css  Layout.tsx
demo/src/pages/: Events.css  Events.tsx  History.css  History.tsx  Home.css  Home.tsx  Journal.css  Journal.tsx  Login.css  Login.tsx  Onboarding.css  Onboarding.tsx  Resources.css  Resources.tsx  Streak.css  Streak.tsx  Survey.css  Survey.tsx
demo/src/types/: index.ts
model/artifacts/: feature_columns.joblib  model_config.txt  scaler.joblib
model/notebooks/: combined.ipynb
