[project]
name = "dsa4262"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.1.0",
]
